HBASE-16667 Building with JDK 8: ignoring option MaxPermSize=256m (Niels Basjes)